force-app/main/default/objects/ContentVersion/fields/DocumentManagementCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentManagementCompletedDate__c</fullName>
    <label>DocumentManagementCompletedDate</label>
    <type>DateTime</type>
</CustomField>