force-app/main/default/objects/ContentVersion/fields/DocumentManagementInitDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentManagementInitDate__c</fullName>
    <label>DocumentManagementInitDate</label>
    <type>DateTime</type>
</CustomField>