force-app/main/default/objects/ContentVersion/fields/DocumentManagementIsStored__c.field-meta.xml
<CustomField>
    <fullName>DocumentManagementIsStored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set to TRUE if the document is sent to the document store utilizing the Document API</description>
    <label>DocumentManagementIsStored</label>
    <type>Checkbox</type>
</CustomField>