force-app/main/default/objects/ContentVersion/fields/DocumentManagementStoreId__c.field-meta.xml
<CustomField>
    <fullName>DocumentManagementStoreId__c</fullName>
    <externalId>true</externalId>
    <label>DocumentManagementStoreId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>